# api/docs/swagger.json
@@ -167,6 +167,32 @@
                 }
             }
         },
+        "/ice-servers": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "app"
+                ],
+                "summary": "Get ICE servers",
+                "operationId": "ice-servers",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/ICEServer"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/p2p-access": {
             "get": {
                 "security": [
@@ -493,6 +519,24 @@
                 "date": {
                     "type": "string",
                     "format": "date-time"
+                }
+            }
+        },
+        "ICEServer": {
+            "type": "object",
+            "properties": {
+                "credential": {},
+                "credentialType": {
+                    "type": "string"
+                },
+                "urls": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "username": {
+                    "type": "string"
                 }
             }
         },
